# TDD_Project

./: Makefile  README.md  docker-compose.yml  pyproject.toml
tdd_project/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
tdd_project/db/: mongo.py
tdd_project/schemas/: product.py
tdd_project/tests/: conftest.py  factories.py
tdd_project/tests/schemas/: test_product.py
tdd_project/tests/usecases/: test_product.py
tdd_project/usecases/: product.py
